@@ -1,3 +1,10 @@
+2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>
+
+	* gcc.target/s390/s390.exp
+	(check_effective_target_s390_useable_hw): Add inline asm for z14
+	and z15. Replace instruction for z13 with lochiz. Add register
+	clobbers. Check also for __zarch__ when doing the __VX__ test.
+
 2019-11-05  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	* gcc.target/arm/attr-crypto.c: Skip if -mpure-code is used.
